# chore-tracker

./: README.md  TODO.md  pyproject.toml
src/chore_tracker/: __init__.py  __main__.py  chore.py
